# rt2gtfs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rt2gtfs/: __init__.py  cli.py  config.py  download_data.py  gtfs_utils.py  interpolation.py  logging_utils.py  matching.py  models.py  pipeline.py  rt_to_csv.py  time_utils.py
tests/: test_time_utils.py
